package com.ceremonie.demo.enums;

public enum Role {
    ADMIN,
    TRESORIER,
    SECRETAIRE,
    MEMBRE_BUREAU,
    MEMBRE
}