package com.company.erp.modules.education.domain.model.valueobject;

public enum EnrollmentStatus {
    ACTIVE,
    COMPLETED,
    DROPPED,
    SUSPENDED,
    PENDING
}
