package com.company.erp.modules.hr.domain.model.valueobject;

public enum EmployeeStatus {
    ACTIVE,
    ON_LEAVE,
    SUSPENDED,
    TERMINATED
}
